--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -22,7 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\Core.xml</DocumentationFile>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -43,6 +43,8 @@
   <ItemGroup>
      <Compile Include="AppConfig.cs" />
      <Compile Include="Event\CallBack.cs" />
+     <Compile Include="Event\EventTicket.cs" />
+     <Compile Include="Event\XEvent.cs" />
      <Compile Include="GameException.cs" />
      <Compile Include="IAppEntry.cs" />
      <Compile Include="Log\Debugger.cs" />
@@ -56,6 +58,9 @@
      <Compile Include="Manager\IModule.cs" />
      <Compile Include="Singleton.cs" />
      <Compile Include="Utils\BaseApplication.cs" />
+     <Compile Include="Utils\IComparable.cs" />
+     <Compile Include="Utils\IListST.cs" />
+     <Compile Include="Utils\SequenceList.cs" />
      <Compile Include="Utils\Utils.ITextHelper.cs" />
      <Compile Include="Utils\Utils.TextUtility.cs" />
      <Compile Include="Utils\Utils.Tools.cs" />
